--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,6 +17,11 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build
-      run: cargo build --verbose --release
+      run: cargo build --release
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: rusty-bot
+        path: ./target/release/rusty-bot
     # - name: Run tests
     #   run: cargo test --verbose
