--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,12 @@ edition = "2021"
 
 [dependencies]
 dotenv = "^0.15"
-serenity = { version = "^0.11", features = ["client", "standard_framework", "voice", "cache"]}
-songbird = { version = "^0.3", features = ["yt-dlp", "builtin-queue", "serenity"]}
-tokio = { version = "^1.21", features = ["macros", "rt-multi-thread", "signal"]}
+poise = "^0.5"
+serenity = { version = "^0.11", features = ["voice", "model"], default-features = false}
+songbird = { version = "^0.3", features = ["yt-dlp", "builtin-queue"]}
+thiserror = "1.0.56"
+tokio = { version = "^1.21", features = ["macros", "rt-multi-thread", "sync", "time"]}
 tracing = "^0.1"
 tracing-futures = "^0.2"
 tracing-subscriber = "^0.3"
+url = "2.5.0"
