--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ dotenv = "^0.15"
 poise = "0.6.1-rc1"
 reqwest = "0.11.23"
 serenity = { version = "^0.12", features = ["voice", "model"], default-features = false}
-songbird = { version = "^0.4", features = [ "builtin-queue"]}
+songbird = { git = "https://github.com/serenity-rs/songbird.git", branch="current", features = [ "builtin-queue"]}
+symphonia = "0.5.3"
 thiserror = "1.0.56"
 tokio = { version = "^1.21", features = ["macros", "rt-multi-thread", "sync", "time"]}
 tracing = "^0.1"
@@ -16,4 +17,11 @@ tracing-futures = "^0.2"
 tracing-subscriber = "^0.3"
 url = "2.5.0"
 
-[dependencies.symphonia]
+sea-orm = { version = "^0.12", features = [ "runtime-tokio-rustls", "macros" ] }
+
+
+[features]
+default = ["sqlite"]
+sqlite = ["sea-orm/sqlx-sqlite"]
+mysql = ["sea-orm/sqlx-mysql"]
+postgres = ["sea-orm/sqlx-postgres"]
