--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,12 +16,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Build
+    - name: Test
+      run: cargo test
+    - name: Build (Release)
       run: cargo build --release
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v4
       with:
-        name: rusty-bot
-        path: ./target/release/rusty-bot
+        name: Linux SQLite
+        path: ./target/release/rusty_bot
     # - name: Run tests
     #   run: cargo test --verbose
