--- a/database/Cargo.toml
+++ b/database/Cargo.toml
@@ -10,3 +10,4 @@ mongodb = {version="2.8.0", features=["tokio-runtime"]}
 serde = "1.0.188"
 futures = "0.3.28"
 tokio = {version="1.35.1", features=["full"]}
+chrono = { version = "0.4", features = ["serde"] }
