--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,7 +10,31 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  test:
+  test_bot:
+    runs-on: ubuntu-latest
+    needs: [test_db]
+    steps:
+    - uses: actions/checkout@v3
+    - name: Start MongoDB
+      uses: supercharge/mongodb-github-action@1.10.0
+      with:
+        mongodb-version: "7.0"
+    - name: Test Bot
+      run: cargo test -p rusty_bot
+  
+  test_web:
+    runs-on: ubuntu-latest
+    needs: [test_db]
+    steps:
+    - uses: actions/checkout@v3
+    - name: Start MongoDB
+      uses: supercharge/mongodb-github-action@1.10.0
+      with:
+        mongodb-version: "7.0"
+    - name: Test Bot
+      run: cargo test -p rusty_web
+  
+  test_db:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -20,20 +44,22 @@ jobs:
         mongodb-version: "7.0"
     - name: Test Database Layer
       run: cargo test -p database
-    - name: Test Bot
-      run: cargo test
 
   build:
     runs-on: ubuntu-latest
-    needs: test
+    needs: [test_db, test_web, test_bot]
     steps:
     - uses: actions/checkout@v3
-    - name: Build (Release)
-      run: cargo build --release
+    - name: Build Bot (Release)
+      run: cargo build --release -p rusty_bot
+    - name: Build Web (Release)
+      run: cargo build --release -p rusty_web
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v4
       with:
         name: Linux SQLite
-        path: ./target/release/rusty_bot
+        path: |
+          ./target/release/rusty_bot
+          ./target/release/rusty_web
     # - name: Run tests
     #   run: cargo test --verbose
