--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,29 +1,3 @@
 [workspace]
-members = [".", "database", "rusty-web"]
-
-
-
-
-[package]
-name = "rusty_bot"
-version = "0.1.0"
-edition = "2021"
-
-[dependencies]
-database = {path="database"}
-
-mongodb = {version="2.8.0"}
-dotenv = "^0.15"
-poise = "0.6.1-rc1"
-reqwest = "0.11.23"
-serenity = { version = "^0.12", features = ["voice", "model"], default-features = false}
-songbird = { git = "https://github.com/serenity-rs/songbird.git", branch="current", features = [ "builtin-queue"]}
-symphonia = {version = "0.5.3", features=["all-codecs", "all-formats"]}
-thiserror = "1.0.56"
-tokio = { version = "^1.21", features = ["macros", "rt-multi-thread", "sync", "time", "signal", "full"]}
-tracing = "^0.1"
-tracing-futures = "^0.2"
-tracing-subscriber = "^0.3"
-url = "2.5.0"
-regex = "1.10.2"
-debug_print = "1.0.0"
+members = ["database", "rusty-web", "rusty-bot"]
+resolver = "2"
