--- a/database/Cargo.toml
+++ b/database/Cargo.toml
@@ -11,3 +11,4 @@ serde = "1.0.188"
 futures = "0.3.28"
 tokio = {version="1.35.1", features=["full"]}
 chrono = { version = "0.4", features = ["serde"] }
+rand = "0.8.5"
