--- a/rusty-web/Cargo.toml
+++ b/rusty-web/Cargo.toml
@@ -9,4 +9,5 @@ edition = "2021"
 database = {path="../database"}
 dotenv = "0.15.0"
 rocket = "0.5.0"
-rocket_dyn_templates = {version="0.1.0", features=["tera"]}
+serde = "1.0.196"
+serde_json = "1.0.113"
