--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -52,12 +52,20 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build Bot (Release)
       run: cargo build --release -p rusty_bot
-    - name: Build Web (Release)
+    - name: Build Web Backend (Release)
       run: cargo build --release -p rusty_web
+    - name: Build Web Frontend
+      working-directory: ./rusty-web/frontend
+      run: npm run build
+
+    - name: Collect Build Output
+      run: |
+        mkdir ./build_output
+        cp ./target/release/rusty_bot ./build_output
+        cp ./target/release/rusty_web ./build_output
+        cp -r ./rusty-web/frontend/dist ./build_output/web_frontend
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v4
       with:
         name: Linux Release
-        path: |
-          ./target/release/rusty_bot
-          ./target/release/rusty_web
+        path: ./build_output/*
